--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -10,19 +10,28 @@ $txt: #183b56;
     padding-block: 8px;
     position: relative;
     background: white;
+    box-shadow: -1px 0 5px rgba(20,20,20,0.04);
     .footer-links{
         width: 100%;
         padding-inline: 18px;
         margin-top: 7px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         a{
-            margin-block: 6px;
             width: 100%;
-            display: inline-block;
             color: $txt;
             font-size: 16px;
             cursor: pointer;
+            text-align: center;
             &:hover{
                 text-decoration: underline;
+            }
+            &:first-child{
+                border-right: 1px solid rgba(0,0,0,0.1);
+            }
+            &:last-child{
+                border-left: 1px solid rgba(0,0,0,0.1);
             }
             i{
                 transform: translateY(2px) translateX(10px);
@@ -47,10 +56,11 @@ $txt: #183b56;
                 i{
                     transition: .3s ease-in-out;
                     border-radius: 4px;
-                    font-size: 21px;
+                    font-size: 19px;
                     padding: 10px;
                     color: $txt;
                     margin-inline: 3px;
+                    opacity: 0.9;
                     cursor: pointer;
                 }
             }
@@ -146,13 +156,15 @@ $txt: #183b56;
             justify-content: space-between;
             text-align: center;
             a{
-                border-right: 1px solid lightgrey;
                 color: #183B56;
                 font-size: 16px;
                 opacity: 0.8;
                 cursor: pointer;
-                &:nth-child(3){
-                    border-right: none;
+                &:first-child{
+                    border-right: 1px solid lightgrey;
+                }
+                &:last-child{
+                    border: none;
                 }
                 &:hover{
                     text-decoration: underline;
@@ -188,7 +200,7 @@ $txt: #183b56;
                         margin-inline: 3px;
                         cursor: pointer;
                         &:hover{
-                            color: #0082ec;
+                            color: $primBtn;
                         }
                     }
                 }
