--- a/static/scss/global/global.css
+++ b/static/scss/global/global.css
@@ -11,7 +11,7 @@ html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   background: rgb(248, 248, 248) !important;
-  max-width: 1180px;
+  max-width: 1350px;
   margin: auto;
 }
 
@@ -48,7 +48,7 @@ button:hover {
 
 h1.section-heading {
   color: #183b56;
-  font-size: 27px;
+  font-size: 24px;
 }
 
 p {
@@ -59,10 +59,11 @@ p.paragraph {
   opacity: 0.8;
 }
 p.headingp {
-  font-size: 16.5px;
+  font-size: 14px;
   color: #183b56;
   opacity: 0.8;
-  margin-bottom: 8px;
+  margin-bottom: 4px;
+  font-weight: 500;
 }
 
 p.link {
