--- a/static/scss/store/base.scss
+++ b/static/scss/store/base.scss
@@ -36,7 +36,7 @@ $txt: #183b56;
         color: $white;
         font-size: 26px;
         margin-bottom: 15px;
-        font-weight: 600;
+        font-weight: 700;
       }
       .paragraph{
         margin-top: 0;
@@ -270,7 +270,7 @@ $txt: #183b56;
   }
 }
 
-// Categories
+// Map
 .map{
   width: 100%;
   height: auto;
@@ -292,8 +292,8 @@ $txt: #183b56;
       filter: brightness(35%);
     }
     .content{
-      padding-top: 100px;
-      padding-bottom: 45px;
+      padding-top: 125px;
+      padding-bottom: 70px;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -372,7 +372,7 @@ $txt: #183b56;
       }
       .services-cards{
         z-index: 100;
-        margin-top: 15px;
+        margin-top: 10px;
         display: flex;
         overflow-x: scroll;
         padding-top: 25px;
@@ -390,13 +390,15 @@ $txt: #183b56;
             cursor: pointer !important;
         }
         .service{
-          min-width: 200px;
-          max-width: 200px;
+          min-width: 220px;
+          max-width: 220px;
           height: min-content;
-          margin: 0 25px;
+          margin: 0 30px;
           position: relative;
-          transition: .2s;
+          transition: .1s;
           cursor: pointer;
+          border-radius: 4px;
+          padding: 10px;
           .service-image{
             width: 100%;
             height: 105px;
@@ -425,12 +427,12 @@ $txt: #183b56;
             }
           }
           .name{
-            font-size: 17px;
+            font-size: 18px;
             color: $txt;
             margin-bottom: 2px;
           }
           .business-name{
-            font-size: 12px;
+            font-size: 13px;
             color: $txt;
             opacity: 0.7;
           }
@@ -440,29 +442,11 @@ $txt: #183b56;
             font-size: 15px;
             opacity: 0.9;
           }
-          button{
-            margin-top: 15px;
-            height: 38px;
-            color: $txt;
-            border: none;
-            text-align: center;
-            border-radius: 4px;
-            background: transparent;
-            width: 95%;
-            background: rgba(190,190,190,0.2);
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            display: none;
-            &:hover{
-              filter: brightness(100%);
-            }
-          }
           &:first-child{
             margin-left: 0;
           }
           &:hover{
+            background: white;
             .name{
               text-decoration: underline;
             }
@@ -488,7 +472,7 @@ $txt: #183b56;
       }
     }
     .cat-cards{
-      padding-block: 25px;
+      padding-block: 5px;
       margin-top: 10px;
       display: flex;
       flex-wrap: wrap;
@@ -545,6 +529,21 @@ $txt: #183b56;
           transform: scale(1.08);
           filter: brightness(93%);
         }
+      }
+    }
+  }
+  // Map
+  .map{
+    padding-top: 5px;
+    width: 80%;
+    height: auto;
+    margin: auto;
+    .content{
+      padding: 0 18px;
+      padding-top: 5px;
+      padding-bottom: 20px;
+      .text{
+        text-align: center;
       }
     }
   }
