--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -212,19 +212,19 @@
   }
   #desNav {
     width: 100%;
+    max-width: 1350px;
+    margin: auto;
     height: 65px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     position: fixed;
-    left: 50%;
-    transform: translateX(-50%);
     top: 0;
     z-index: 10000000000000000000;
     transition: 0s;
     background: transparent;
-    padding-inline: 0;
+    padding-inline: 18px;
     padding-block: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   #desNav::before {
     content: "";
@@ -256,29 +256,19 @@
     transition: 0.5s;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   }
-  #desNav.sticky .desktop-nav-content .logo h1 {
+  #desNav.sticky .logo h1 {
     color: #183b56;
   }
-  #desNav.sticky .desktop-nav-content .logo h1 span {
+  #desNav.sticky .logo h1 span {
     border-color: #06c484;
   }
-  #desNav.sticky .desktop-nav-content .menu a {
+  #desNav.sticky .menu a {
     color: #183b56;
   }
-  #desNav.sticky .desktop-nav-content .menu a.nav_order_btn {
+  #desNav.sticky .menu a.nav_order_btn {
     color: rgb(246, 246, 246);
   }
-  #desNav .desktop-nav-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    max-width: 1150px;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  #desNav .desktop-nav-content .logo {
+  #desNav .logo {
     transition: 0.8s;
     cursor: pointer;
     transform: translateY(4px);
@@ -286,19 +276,19 @@
     height: auto;
     z-index: 1000;
   }
-  #desNav .desktop-nav-content .logo h1 {
+  #desNav .logo h1 {
     color: rgb(246, 246, 246);
     font-size: 18px;
   }
-  #desNav .desktop-nav-content .logo h1 span {
+  #desNav .logo h1 span {
     font-size: 13px;
     border-bottom: 1px solid rgb(246, 246, 246);
     padding-bottom: 3px;
   }
-  #desNav .desktop-nav-content .logo .logo2 {
+  #desNav .logo .logo2 {
     display: none;
   }
-  #desNav .desktop-nav-content .menu {
+  #desNav .menu {
     padding-inline: 10px;
     width: -webkit-max-content;
     width: -moz-max-content;
@@ -308,7 +298,7 @@
     justify-content: center;
     align-items: center;
   }
-  #desNav .desktop-nav-content .menu a {
+  #desNav .menu a {
     color: rgb(246, 246, 246);
     font-size: 16px;
     text-decoration: none;
@@ -319,21 +309,21 @@
     transition: 0.2s;
     border-bottom: 1px solid transparent;
   }
-  #desNav .desktop-nav-content .menu a:hover {
+  #desNav .menu a:hover {
     border-bottom: 1px solid rgb(246, 246, 246);
   }
-  #desNav .desktop-nav-content .menu a:first-child {
+  #desNav .menu a:first-child {
     margin-left: 0;
   }
-  #desNav .desktop-nav-content .menu a:last-child {
+  #desNav .menu a:last-child {
     margin-right: 0;
   }
-  #desNav .desktop-nav-content .menu a.nav_order_btn {
+  #desNav .menu a.nav_order_btn {
     background: #06c484;
     border-radius: 4px;
     padding: 8px 17px;
   }
-  #desNav .desktop-nav-content .menu a.nav_order_btn:hover {
+  #desNav .menu a.nav_order_btn:hover {
     filter: brightness(85%);
     border-bottom: 1px solid transparent;
   }
