--- a/static/scss/page/search.scss
+++ b/static/scss/page/search.scss
@@ -91,7 +91,7 @@ $txt: #183b56;
             margin-block: 20px;
         }
         .service{
-          width: 93%;
+          width: 89%;
           max-width: 400px;
           height: min-content;
           margin: 0 25px;
@@ -102,14 +102,15 @@ $txt: #183b56;
           transform: translateX(-50%);
             .service-image{
               width: 100%;
-              height: 170px;
+              height: 180px;
               object-fit: cover;
               filter: brightness(90%);
               border-radius: 4px;
             }
             .reviews{
               display: flex;
-              margin-block: 3px;
+              margin-block: 1px;
+              margin-top: 6px;
               p{
                 margin-bottom: 0;
                 color: #FFBC55;
