--- a/static/scss/page/search.css
+++ b/static/scss/page/search.css
@@ -33,7 +33,7 @@
   outline: none;
   padding: 7px;
   background: white;
-  border: 1px solid rgb(234, 234, 234);
+  border: 1px solid red;
   color: #183b56;
   border-radius: 4px;
   font-size: 15px;
