--- a/static/scss/page/search.scss
+++ b/static/scss/page/search.scss
@@ -40,7 +40,7 @@ $txt: #183b56;
     outline: none;
     padding: 7px;
     background: white;
-    border: 1px solid rgb(234,234,234);
+    border: 1px solid red;
     color: $txt;
     border-radius: 4px;
     font-size: 15px;
