--- a/static/scss/page/search.css
+++ b/static/scss/page/search.css
@@ -26,6 +26,22 @@
   position: fixed;
   top: 0;
 }
+.search-search button {
+  width: 0;
+  height: 0;
+  border: none;
+  position: absolute;
+  right: 58px;
+  top: 30px;
+}
+.search-search button i {
+  font-size: 15px;
+  color: rgba(24, 59, 86, 0.662745098);
+  padding: 5px;
+  margin: -5px;
+  background: rgba(155, 155, 155, 0.22);
+  border-radius: 100%;
+}
 .search-search input {
   width: 100%;
   height: 50px;
@@ -33,7 +49,7 @@
   outline: none;
   padding: 7px;
   background: white;
-  border: 1px solid red;
+  border: 1px solid rgb(234, 234, 234);
   color: #183b56;
   border-radius: 4px;
   font-size: 15px;
