--- a/static/scss/page/search.scss
+++ b/static/scss/page/search.scss
@@ -32,7 +32,22 @@ $txt: #183b56;
       position: fixed;
       top: 0;
   }
-
+  button{
+      width: 0;
+      height: 0;
+      border: none;
+      position: absolute;
+      right: 58px;
+      top: 30px;
+      i{
+          font-size: 15px;
+          color: #183b56a9;
+          padding: 5px;
+          margin: -5px;
+          background: rgba(155, 155, 155, 0.22);
+          border-radius: 100%;
+      }
+  }
   input{
     width: 100%;
     height: 50px;
@@ -40,7 +55,7 @@ $txt: #183b56;
     outline: none;
     padding: 7px;
     background: white;
-    border: 1px solid red;
+    border: 1px solid rgb(234,234,234);
     color: $txt;
     border-radius: 4px;
     font-size: 15px;
