--- a/apps/core/templates/core/search-results.html
+++ b/apps/core/templates/core/search-results.html
@@ -12,7 +12,7 @@
 <div class="search-search" id="searchSearch">
     <form id="searchForm" action="{% url 'home_page_search' %}" method="GET">
        {% csrf_token %}
-       <input name="q" type="text" placeholder="Søk blant 500 tjenester"><button type="submit"><i class="fa-solid fa-circle-check"></i></button>
+       <input name="q" type="text" placeholder="Søk blant 500 tjenester"><i class="fa-solid fa-circle-check"></i>
    </form>
  </div>
 <div class="page">
