--- a/static/scss/page/search.scss
+++ b/static/scss/page/search.scss
@@ -32,19 +32,22 @@ $txt: #183b56;
       position: fixed;
       top: 0;
   }
-
+  button{
+      border: none;
+      background: transparent;
+      padding: 0;
+      position: absolute;
+      right: 42px;
+      top: 29px;
       i{
-        position: absolute;
-        right: 58px;
-        top: 30px;
           font-size: 15px;
           color: #183b56a9;
-          padding: 5px;
-          margin: -5px;
+          padding: 7px;
+          margin: -7px;
           background: rgba(155, 155, 155, 0.22);
           border-radius: 100%;
       }
-  
+  }
   input{
     width: 100%;
     height: 50px;
