--- a/static/scss/page/search.css
+++ b/static/scss/page/search.css
@@ -32,14 +32,14 @@
   position: absolute;
   right: 42px;
   top: 29px;
+  padding: 3px 7px;
+  margin: -3px -7px;
+  border-radius: 100%;
+  background: rgba(155, 155, 155, 0.22);
 }
 .search-search button i {
   font-size: 15px;
   color: rgba(24, 59, 86, 0.662745098);
-  padding: 7px;
-  margin: -7px;
-  background: rgba(155, 155, 155, 0.22);
-  border-radius: 100%;
 }
 .search-search input {
   width: 100%;
