--- a/static/scss/store/product/product.css
+++ b/static/scss/store/product/product.css
@@ -28,20 +28,19 @@
   box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
 }
 .product-search button {
-  width: 0;
-  height: 0;
   border: none;
+  background: transparent;
   position: absolute;
-  right: 58px;
-  top: 30px;
+  right: 42px;
+  top: 29px;
+  padding: 3px 8px;
+  margin: -3px -8px;
+  border-radius: 100%;
+  background: rgba(155, 155, 155, 0.22);
 }
 .product-search button i {
   font-size: 15px;
   color: rgba(24, 59, 86, 0.662745098);
-  padding: 5px;
-  margin: -5px;
-  background: rgba(155, 155, 155, 0.22);
-  border-radius: 100%;
 }
 .product-search input {
   width: 100%;
