--- a/static/scss/store/product/product.scss
+++ b/static/scss/store/product/product.scss
@@ -34,19 +34,18 @@ $txt: #183b56;
         box-shadow: 0 0 4px rgba(5,5,5,0.12);
     }
     button{
-        width: 0;
-        height: 0;
         border: none;
+        background: transparent;
         position: absolute;
-        right: 58px;
-        top: 30px;
+        right: 42px;
+        top: 29px;
+        padding: 3px 8px;
+        margin: -3px -8px;
+        border-radius: 100%;
+        background: rgba(155, 155, 155, 0.22);
         i{
             font-size: 15px;
             color: #183b56a9;
-            padding: 5px;
-            margin: -5px;
-            background: rgba(155, 155, 155, 0.22);
-            border-radius: 100%;
         }
     }
     input{
