--- a/apps/core/templates/core/search-results.html
+++ b/apps/core/templates/core/search-results.html
@@ -32,7 +32,7 @@
                        <p><i class="fa-solid fa-star"></i>3</p><span>(40)</span>
                     </div>
                     <div class="name">{{product.name}}</div>
-                    <div class="business-name">{{product.business_name}}</div>
+                    <div class="business-name"><i class="fa-solid fa-circle-user"></i>{{product.business_name}}</div>
                  </div>
             </div>
             {% endfor %}
