--- a/static/scss/page/search.scss
+++ b/static/scss/page/search.scss
@@ -62,6 +62,10 @@ $txt: #183b56;
       color: $txt;
       opacity: 0.8;
     }
+    &:focus, &:active{
+      border-width: 2px;
+      border-color: rgb(212, 212, 212);
+    }
   }
 }
 
@@ -86,16 +90,15 @@ $txt: #183b56;
    }
     .search-results{
       padding-inline: 18px;
-      padding-top: 95px;
+      padding-top: 100px;
         .services{
-            padding-block: 12px;
-            margin-block: 20px;
+            padding-block: 16px;
+            margin-block: 26px;
         }
         .service{
           width: 89%;
           max-width: 400px;
           height: min-content;
-          margin: 0 25px;
           padding: 0;
           position: relative;
           margin: auto;
@@ -136,9 +139,20 @@ $txt: #183b56;
               margin-bottom: 3px;
             }
             .business-name{
-              font-size: 14px;
+              font-size: 12px;
               color: $txt;
               opacity: 0.7;
+              font-weight: 500;
+              width: max-content;
+              padding: 3px;
+              margin: -2px;
+              transform: translateY(4px);
+              background: rgba(110,110,110,0.1);
+              border-radius: 4px;
+                i{
+                    font-size: 11px;
+                    margin-right: 6px;
+                }
             }
             .short-des{
               margin-top: 8px;
@@ -148,6 +162,15 @@ $txt: #183b56;
             }
             &:first-child{
               margin-left: 0;
+            }
+            &:hover{
+              .name{
+                text-decoration: underline;
+              }
+              .service-image{
+                transition: .2s;
+                filter: brightness(85%);
+              }
             }
         }
     }
